[package]
name = "git-timesheet-aliases"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
dirs = "5.0.1"

# [lib]
# name = git-timesheet-aliases

[[bin]]
name = "gitim"
path = "src/gitim.rs"

# [[bin]]
# name = "cogi"
# path = "src/cogi.rs"

# [[bin]]
# name = "copugi"
# path = "src/copugi.rs"

# binary was 4.4MB, that's absurd
# https://github.com/johnthagen/min-sized-rust
[profile.release]
strip = true
opt-level = "z" # no change
lto = true
codegen-units = 1 # no change
panic = "abort"